Update EDITOR and tmux settings for tmuxinator

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ bind-key a send-prefix
 
 #Color and terminal settings
 set -g base-index 1
+set-window-option -g pane-base-index 1
 set-option -g status-bg blue
 set-option -g status-fg white
 set-window-option -g window-status-current-bg black
