--- a/tmuxinator/dev-4.yml
+++ b/tmuxinator/dev-4.yml
@@ -1,25 +1,21 @@
-# ~/.tmuxinator/dev4.yml
+# ~/.tmuxinator/dev-4.yml
 
-name: dev4
+name: dev-4
 root: ~/
 
 windows:
-  - dev:
+  - dev-4:
       layout: tiled
       panes:
         - 1:
           - ssh dev
           - cd frontend
-          - foreman start
         - 2:
           - ssh dev
           - cd backend
-          - foreman start
         - 3:
           - ssh dev
           - cd frontend
-          - rails c
         - 4:
           - ssh dev
           - cd backend
-          - bin/logikcull console -E development
