--- a/tmuxinator/dev.yml
+++ b/tmuxinator/dev.yml
@@ -4,7 +4,26 @@ name: dev
 root: ~/
 
 windows:
-  - dev:
+  - consoles:
+      layout: tiled
+      panes:
+        - 1:
+          - ssh dev
+          - cd frontend
+          - foreman start
+        - 2:
+          - ssh dev
+          - cd backend
+          - foreman start
+        - 3:
+          - ssh dev
+          - cd frontend
+          - rails c
+        - 4:
+          - ssh dev
+          - cd backend
+          - bin/logikcull console -E development
+  - dirs:
       layout: even-horizontal
       panes:
         - 1:
