Just use rails s - easier debugging and no mail output unless needed

--- a/tmuxinator/dev.yml
+++ b/tmuxinator/dev.yml
@@ -10,7 +10,7 @@ windows:
         - 1:
           - ssh dev
           - cd frontend
-          - foreman start
+          - rails s
         - 2:
           - ssh dev
           - cd frontend
