Shuffle tmux.conf lines

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,9 +6,11 @@ unbind-key C-b
 # Use Ctrl-a a for nested sessions
 bind-key a send-prefix
 
-#Color and terminal settings
+# start window numbers at 1 to match keyboard order
 set -g base-index 1
 set-window-option -g pane-base-index 1
+
+#Color and terminal settings
 set-option -g status-bg blue
 set-option -g status-fg white
 set-window-option -g window-status-current-bg black
