--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,7 @@ set -g base-index 1
 set-window-option -g pane-base-index 1
 
 #Color and terminal settings
+set -g default-terminal "screen-256color"
 set-option -g status-bg blue
 set-option -g status-fg white
 set-window-option -g window-status-current-bg black
