--- a/tmux.conf
+++ b/tmux.conf
@@ -29,6 +29,7 @@ bind C-c choose-buffer "run \"tmux save-buffer -b %% - | xclip -i -sel clipboard
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer" \; run "tmux display \"Copied from \(+\) $(xclip -o -sel clipboard | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \""
 
 # Setup 'v' to begin selection as in Vim
+set-option -g default-command "reattach-to-user-namespace -l bash"
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
