--- a/tmux.conf
+++ b/tmux.conf
@@ -6,22 +6,72 @@ unbind-key C-b
 # Use Ctrl-a a for nested sessions
 bind-key a send-prefix
 
-# start window numbers at 1 to match keyboard order
+# Increase scrollback lines
+set -g history-limit 10000
+
+# Reload tmux.conf with 'r'
+bind r source-file ~/.tmux.conf
+
+# Start window numbers at 1 to match keyboard order
 set -g base-index 1
 set-window-option -g pane-base-index 1
 
-#Color and terminal settings
+# Renumber windows sequentially after closing any of them
+set -g renumber-windows on
+
+# Color and terminal settings
 set -g default-terminal "screen-256color"
-set-option -g status-bg blue
-set-option -g status-fg white
+set-option -g status-fg black
+set-option -g status-bg yellow
+
+set-window-option -g window-status-current-fg white
 set-window-option -g window-status-current-bg black
+
+set-window-option -g clock-mode-colour cyan
+
+# Enable mouse support
 set -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
+set -g mouse-select-window on
 set -g visual-activity on
 
-# Use vim keybindings in copy mode
+# Set status bar to show system information
+set -g status-right '#[fg=white]#(uptime | cut -d "," -f 3-)'
+
+#===============================================================================
+# Keybindings
+#-------------------------------------------------------------------------------
 setw -g mode-keys vi
+
+# Vim style split navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Set window split mapping
+unbind %
+unbind '"'
+bind | split-window -h
+bind - split-window -v
+
+# Move windows with P and N
+bind P swap-window -t -1
+bind N swap-window -t +1
+
+# Max/min current pane into full window with up arrow and down arrow
+unbind Up
+bind Up new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \; swap-pane -s tmux-zoom.1 \; select-window -t tmux-zoom
+unbind Down
+bind Down last-window \; swap-pane -s tmux-zoom.1 \; kill-window -t tmux-zoom
+
+# Smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Use x11 copy/paste integration
 # On OS X, use xquartz with "Update pasteboard immediately when new text is selected option"
@@ -37,36 +87,3 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-# renumber windows sequentially after closing any of them
-set -g renumber-windows on
-
-# increase scrollback lines
-set -g history-limit 10000
-
-# Set status bar to show system information
-set -g status-right '#[fg=white]#(uptime | cut -d "," -f 3-)'
-
-#Keybindings
-setw -g mode-keys vi
-
-#Vim style split navigation
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-#Set window split mapping
-unbind %
-bind | split-window -h
-bind - split-window -v
-
-#Move windows with P and N
-bind P swap-window -t -1
-bind N swap-window -t +1
-
-# smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
