Set tmux command line color

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,6 +29,9 @@ set-window-option -g window-status-current-bg black
 
 set-window-option -g clock-mode-colour cyan
 
+set-option -g message-fg black
+set-option -g message-bg cyan
+
 # Enable mouse support
 set -g mode-mouse on
 set -g mouse-select-pane on
