--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,8 @@
 # vi: set ft=sh :
 
+# set XCLIP env for clipboard interaction
+if 'test "$(uname)" = "Darwin"' 'setenv -g XCLIP "pbcopy"' 'setenv -g XCLIP "xclip -i -sel clipboard"'
+
 # Use Ctrl-a instead of Ctrl-B
 set-option -g prefix C-a
 unbind-key C-b
@@ -76,11 +79,10 @@ bind C-c choose-buffer "run \"tmux save-buffer -b %% - | xclip -i -sel clipboard
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer" \; run "tmux display \"Copied from \(+\) $(xclip -o -sel clipboard | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \""
 
 # Setup 'v' to begin selection as in Vim
-set-option -g default-command "reattach-to-user-namespace -l bash"
 bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y copy-pipe "$XCLIP"
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy Enter copy-pipe "$XCLIP"
 
