--- a/tmux.conf
+++ b/tmux.conf
@@ -49,6 +49,11 @@ set -g status-right '#[fg=white]#(uptime | cut -d "," -f 3-)'
 # Keybindings
 #-------------------------------------------------------------------------------
 setw -g mode-keys vi
+bind [ copy-mode
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-pipe "xclip -i -sel primary"
+bind -t vi-copy V rectangle-toggle
+bind ] paste-buffer
 
 # Vim style split navigation
 bind h select-pane -L
