--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,10 @@ unbind-key C-b
 # Use Ctrl-a a for nested sessions
 bind-key a send-prefix
 
+# Don't delay escape sequences for better evil/emacs behavior in tmux
+# This is probably not a great idea theoretically but it does what I want
+set -s escape-time 0
+
 # Increase scrollback lines
 set -g history-limit 10000
 
