--- a/tmux.conf
+++ b/tmux.conf
@@ -41,10 +41,10 @@ set-option -g message-fg black
 set-option -g message-bg cyan
 
 # Enable mouse support
-set -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
+
+# Indicate window activity
+set -g monitor-activity on
 set -g visual-activity on
 
 # Set status bar to show system information
