Apparrently reattach-to-user-namespace is not obsolete in osx yosemite and onward. Readding for  support

--- a/tmux.conf
+++ b/tmux.conf
@@ -96,3 +96,5 @@ bind-key -t vi-copy y copy-pipe "$XCLIP"
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "$XCLIP"
 
+# Load reattach-to-user-namespace if on OSX
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
