Fix tmux 2.1 scrolling

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,6 +42,9 @@ set-option -g message-bg cyan
 
 # Enable mouse support
 set -g mouse on
+# Incantations to restore pre-v2.1 mouse scrolling behavior
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # Indicate window activity
 set -g monitor-activity on
