--- a/tmux.conf
+++ b/tmux.conf
@@ -6,9 +6,6 @@ set -g default-terminal "screen-256color"
 set -g base-index 1
 set-window-option -g pane-base-index 1
 
-# set XCLIP env for clipboard interaction
-if 'test "$(uname)" = "Darwin"' 'setenv -g XCLIP "pbcopy"' 'setenv -g XCLIP "xclip -i -sel clipboard"'
-
 # Use Ctrl-a instead of Ctrl-B
 set-option -g prefix C-a
 unbind-key C-b
@@ -58,9 +55,8 @@ set -g status-right '#[fg=white]#(uptime | cut -d "," -f 3-)'
 #-------------------------------------------------------------------------------
 setw -g mode-keys vi
 bind [ copy-mode
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "xclip -i -sel primary"
-bind -t vi-copy V rectangle-toggle
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-pipe "pbcopy"
 bind ] paste-buffer
 
 # Vim style split navigation
@@ -85,19 +81,6 @@ bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
-
-# Use x11 copy/paste integration
-# On OS X, use xquartz with "Update pasteboard immediately when new text is selected option"
-bind C-c choose-buffer "run \"tmux save-buffer -b %% - | xclip -i -sel clipboard >/dev/null\" \; run \" tmux display \\\"Clipboard \(+\) filled with: $(tmux save-buffer -b %1 - | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \\\" \" "
-bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer" \; run "tmux display \"Copied from \(+\) $(xclip -o -sel clipboard | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \""
-
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "$XCLIP"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "$XCLIP"
 
 # Load reattach-to-user-namespace if on OSX
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
