--- a/tmux.conf
+++ b/tmux.conf
@@ -68,8 +68,9 @@ bind l select-pane -R
 # Set window split mapping
 unbind %
 unbind '"'
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
+bind c new-window -c '#{pane_current_path}'
 
 # Move windows with P and N
 bind P swap-window -t -1
