--- a/tmux-osx.conf
+++ b/tmux-osx.conf
@@ -1,1 +1,2 @@
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
