Change tmux settings - nested prefix and escape time

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,8 @@ set-window-option -g pane-base-index 1
 # Use Ctrl-a instead of Ctrl-B
 set-option -g prefix C-a
 unbind-key C-b
-# Use Ctrl-a a for nested sessions
-bind-key a send-prefix
+# Use double Ctrl-a for nested sessions
+bind-key C-a send-prefix
 
 # Increase scrollback lines
 set -g history-limit 10000
@@ -45,6 +45,9 @@ set -g visual-activity on
 
 # Set status bar to show system information
 set -g status-right '#[fg=white]#(uptime | cut -d "," -f 3-)'
+
+# Don't delay vim return to normal mode after pressing Esc
+set -s escape-time 0
 
 #===============================================================================
 # Keybindings
