Neovim reverted default mouse, add that setting back. Also some problems with tmux seem cleared up wrt scrolling, clean out conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,7 +16,7 @@ bind-key C-a send-prefix
 set -g history-limit 10000
 
 # Reload tmux.conf with 'r'
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded tmux.conf!"
 
 # Renumber windows sequentially after closing any of them
 set -g renumber-windows on
@@ -35,9 +35,6 @@ set-option -g message-bg cyan
 
 # Enable mouse support
 set -g mouse on
-# Incantations to restore pre-v2.1 mouse scrolling behavior
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # Indicate window activity
 set -g monitor-activity on
@@ -64,10 +61,6 @@ unbind '"'
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
-
-# Move windows with P and N
-bind P swap-window -t -1
-bind N swap-window -t +1
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
