--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 # vi: set ft=sh :
 
 set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # Start window numbers at 1 to match keyboard order
 set -g base-index 1
@@ -22,16 +23,13 @@ bind r source-file ~/.tmux.conf \; display "Reloaded tmux.conf!"
 set -g renumber-windows on
 
 # Color and terminal settings
-set-option -g status-fg black
-set-option -g status-bg yellow
+set-option -g status-style fg=black,bg=yellow
 
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-bg black
+set-window-option -g window-status-current-style fg=white,bg=black
 
 set-window-option -g clock-mode-colour cyan
 
-set-option -g message-fg black
-set-option -g message-bg cyan
+set-option -g message-style fg=black,bg=cyan
 
 # Enable mouse support
 set -g mouse on
@@ -45,6 +43,10 @@ set -g status-right '#[fg=white]#(uptime | cut -d "," -f 3-)'
 
 # Don't delay vim return to normal mode after pressing Esc
 set -s escape-time 0
+
+# Enable vi bindings for copy-mode ( prefix+[ )
+set-window-option -g mode-keys vi
+set -g set-clipboard on
 
 #===============================================================================
 # Keybindings
@@ -72,5 +74,9 @@ bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# Load reattach-to-user-namespace if on OSX
-if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
+# Vi-copy extra keybindings
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+# Linux
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
+# OSX
+# bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "pbcopy"
