Remote vscode (requires some .ssh/config settings), misc tmux settings

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 # vi: set ft=sh :
+set-option -g default-shell /usr/bin/zsh
 
 set -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
@@ -39,7 +40,8 @@ set -g monitor-activity on
 set -g visual-activity on
 
 # Set status bar to show system information
-set -g status-right '#[fg=white]#(uptime | cut -d "," -f 3-)'
+# see strftime docs for % date symbols
+set -g status-right '#[fg=white] %a %b %d %I:%M%p'
 
 # Don't delay vim return to normal mode after pressing Esc
 set -s escape-time 0
